setup db on properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+#logging.level.com.zaxxer.HikariConfig=DEBUG
 spring.application.name=lungamalinga
+
+
+# MY CUSTOM SETTINGS:
+
+#enable console debigging
+spring.h2.console.enabled=true
+
+#dont generate unique name
+spring.datasource.generate-unique-name=false
+
+# create my own db name
+spring.datasource.name=enviro365
+
