recycle tips starter code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.generate-unique-name=false
 # create my own db name
 spring.datasource.name=enviro365
 
+# logging jdbc -> DEBUGGING
+logging.level.org.springframework.jdbc=DEBUG
